--- a/main/style.css
+++ b/main/style.css
@@ -1,7 +1,6 @@
     header {
-      text-align: center;
-      background: url("images/banner.jpg");
-      background-size: cover;
+      background: url("../images/Graphite.jpg"); 
+      text-align:center;
       color: white;
     }
     .nav {
@@ -12,8 +11,8 @@
     }
     img {
       margin: 40px 0px 0px 0px;
-      border: 7px solid white;
-      border-radius: 20px;
+      border: 4px solid white;
+      border-radius: 100px;
     }
     ul {
       padding: 10px;
@@ -25,7 +24,7 @@
     }
     div{
       max-width: 500px;
-      padding: 20px;
+      padding: 5px;
       margin: 0 auto;
     }
     @media (max-width: 500px) {
@@ -38,3 +37,14 @@
         display: block;
       }
     }
+    .project-title {
+      text-align: center;
+    }
+    a:visited {
+      color: green;
+      text-decoration: none;
+    }
+    a:hover {
+      color: red;
+      text-decoration: none;
+      }
